k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: chat-turbo
  labels:
    name: chat-turbo
    app: chat-turbo
